--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -4,17 +4,21 @@
   <form class="container-sm mx-auto" style="max-width: 400px;" action="/login" method="POST">
     <div class="mb-3">
       <label for="email" style="color: #3498db;" class="form-label">Email address</label>
-      <input value="{{email}}" type="email" name="email" class="{{#if errors}}is-invalid{{/if}} form-control" id="email" aria-describedby="emailHelp" required>
+      <input value="{{email}}" type="email" name="email" class="{{#if errors}}is-invalid{{/if}} form-control" id="email"
+        aria-describedby="emailHelp" required>
     </div>
     <div class="mb-3">
       <label for="password" style="color: #3498db;" class="form-label">Password</label>
-      <input type="password" name="password" class="{{#if errors}}is-invalid{{/if}} form-control" id="password" required >
+      <input type="password" name="password" class="{{#if errors}}is-invalid{{/if}} form-control" id="password"
+        required>
     </div>
     {{#if errors}}
-      <div class="mb-3">
-        <small class="text-danger">{{errors.msg}}</small>
-      </div>
+    <div class="mb-3">
+      <small class="text-danger">{{errors.msg}}</small>
+    </div>
     {{/if}}
     <button type="submit" class="btn btn-primary">Login</button>
+    <a class="btn text-bg-light" href="/auth/google">Sign in with <img src="/images/google-icon-2048x2048-czn3g8x8.png"
+        class="mb-1" width="25"></img>oogle</a>
   </form>
 </div>
