--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,7 +1,18 @@
-<section class="hero-section section mt-5">
+<!--<section class="hero-section section mt-5" style="background-image: url('/images/cookit.jpg');">
   <div class="container text-center">
     <h1 class="display-3">Welcome to LetsCookIt</h1>
     <p class="lead">Discover the magic of guessing the recepi 🫨</p>
+    <!-- Add any call-to-action buttons or elements here 
+</div>
+</section>-->
+
+
+<section class="container-fluid p-0 m-0 position-relative">
+  <img src="/images/cookit.jpg" class="img-fluid" style="object-fit: cover; width: 100%; height: 100vh;"
+    alt="Background Image">
+  <div class="position-absolute top-50 start-50 translate-middle text-center text-white">
+    <h1 class="display-3">Welcome to LetsCookIt</h1>
+    <p class="lead">Discover the magic of guessing the recipe 🫨</p>
     <!-- Add any call-to-action buttons or elements here -->
   </div>
 </section>
