--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -31,6 +31,13 @@
           </li>
           <li class="nav-item">
             <a
+              class="nav-link active"
+              aria-current="page"
+              href="/feed"
+            >Posts</a>
+          </li>
+          <li class="nav-item">
+            <a
               class="nav-link active text-danger"
               aria-current="page"
               href="/logout"
