--- a/views/partials/card.hbs
+++ b/views/partials/card.hbs
@@ -1,6 +1,7 @@
 <div class="card" style="width: 18rem;">
   <img src="{{image}}" class="card-img-top" alt="...">
   <div class="card-body">
+    <p>{{user.username}}</p>
     <h5 class="card-title">{{name}}</h5>
     <p class="card-text">{{restaurant}}</p>
     <a href="#" class="btn btn-primary">See More</a>
