--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -38,6 +38,13 @@
           </li>
           <li class="nav-item">
             <a
+              class="nav-link active"
+              aria-current="page"
+              href="/newpost"
+            >New Post</a>
+          </li>
+          <li class="nav-item">
+            <a
               class="nav-link active text-danger"
               aria-current="page"
               href="/logout"
