--- a/views/recepies/new-post.hbs
+++ b/views/recepies/new-post.hbs
@@ -1,19 +1,21 @@
-<form>
+<form action="/newpost" method="POST">
 
   <legend>Create a new Post</legend>
   <div class="mb-3">
-    <label for="inputRecepieName" class="form-label">Recepie Name</label>
+    <label for="name" class="form-label">Recepie Name</label>
     <input
       type="text"
+      name="name"
       id="recepieNameTextInput"
       class="form-control"
       placeholder="Recepie Name"
     />
   </div>
   <div class="mb-3">
-    <label for="inputRestaurant" class="form-label">Restaurant Name</label>
+    <label for="retaurant" class="form-label">Restaurant Name</label>
     <input
       type="text"
+      name="restaurant"
       id="RestaurantNameTextInput"
       class="form-control"
       placeholder="Restaurant Name"
@@ -23,26 +25,22 @@
     <input type="file" class="form-control" id="inputGroupFile02" />
     <label class="input-group-text" for="inputGroupFile02">Image</label>
   </div>
-  <div class="input-group mb-3">
-    <input type="file" class="form-control" id="inputGroupFile02" />
-    <label class="input-group-text" for="inputGroupFile02">Upload</label>
-  </div>
   <div class="mb-3">
-    <label for="disabledSelect" class="form-label">Disabled select menu</label>
-    <select class="form-select" aria-label="Default select example">
-      <option selected>Open this select menu</option>
-      <option value="1">Meat</option>
-      <option value="2">Chicken</option>
-      <option value="3">Fish</option>
-      <option value="4">Dessert</option>
-      <option value="5">Salad</option>
-      <option value="6">Fruits</option>
-      <option value="7">Vegetables</option>
-      <option value="8">Vegan</option>
-      <option value="9">Vegetarian</option>
-      <option value="10">Gluten free</option>
-      <option value="11">Pasta</option>
-      <option value="12">Other</option>
+    <label for="disabledSelect" class="form-label">Category</label>
+    <select class="form-select" name="category" aria-label="Default select example">
+      <option selected>Select One</option>
+      <option value="Meat">Meat</option>
+      <option value="Chicken">Chicken</option>
+      <option value="Fish">Fish</option>
+      <option value="Dessert">Dessert</option>
+      <option value="Salad">Salad</option>
+      <option value="Fruits">Fruits</option>
+      <option value="Vegetables">Vegetables</option>
+      <option value="Vegan">Vegan</option>
+      <option value="Vegetarian">Vegetarian</option>
+      <option value="Gluten Free">Gluten free</option>
+      <option value="Pasta">Pasta</option>
+      <option value="Other">Other</option>
     </select>
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
