--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -14,7 +14,7 @@
 <div class="container my-5">
   <div class="row row-cols-1 row-cols-md-3 g-4">
     {{#each user.posts}}
-      {{>card this}}
+      {{>card post=this currentUser=../currentUser}}
     {{/each}}
   </div>
 </div>
