--- a/views/partials/card.hbs
+++ b/views/partials/card.hbs
@@ -10,5 +10,8 @@
       <button type="submit" class="btn btn-primary bg-light-green">{{#postIsLikedByUser userId=currentUser._id
         likes=post.likes}} No me gusta {{else}} Me gusta {{/postIsLikedByUser}}</button>
     </form>
+    {{#isOwnedByUser currentUserId=currentUser._id postOwnerId=post.user._id}}
+      <a href="/edit/{{post._id}}" class="btn btn-success">Edit</a>
+    {{/isOwnedByUser}}
   </div>
 </div>
