--- a/views/recepies/edit-post.hbs
+++ b/views/recepies/edit-post.hbs
@@ -1,4 +1,4 @@
-<form action="/post/{{post._id}}" method="POST">
+<form action="/edit/{{post._id}}" method="POST">
 
   <legend>Create a new Post</legend>
   <div class="mb-3">
@@ -15,7 +15,7 @@
   <div class="mb-3">
     <label for="retaurant" class="form-label">Restaurant Name</label>
     <input
-        value="{{post.restaurant}}"
+      value="{{post.restaurant}}"
       type="text"
       name="restaurant"
       id="RestaurantNameTextInput"
@@ -33,8 +33,9 @@
       class="form-select"
       name="category"
       aria-label="Default select example"
+      id="categorySelect"
     >
-      <option selected>Select One</option>
+      <option value="Select One">Select One</option>
       <option value="Meat">Meat</option>
       <option value="Chicken">Chicken</option>
       <option value="Fish">Fish</option>
@@ -52,3 +53,8 @@
   <button type="submit" class="btn btn-primary">Update</button>
 
 </form>
+
+<script>
+  let selectedCategory = "{{post.category}}"; 
+  document.getElementById('categorySelect').value = selectedCategory;
+</script>
