--- a/views/recepies/post.hbs
+++ b/views/recepies/post.hbs
@@ -1,23 +1,31 @@
-<div>
-    <img src="{{post.image}}" class="card-img-top" alt="...">
-    <p>{{post.name}}</p>
-    <p>{{post.user.username}}</p>
-    <h5 class="card-title">{{post.name}}</h5>
-    <p class="card-text">{{post.restaurant}}</p>
-    {{#isOwnedByUser currentUserId=currentUser._id postOwnerId=post.user._id}}
-      <a href="/edit/{{post._id}}" class="btn btn-success">Edit</a>
-    {{/isOwnedByUser}}
-</div>
-<form action="/post/{{post._id}}" method="POST">
-    <div class="mb-3">
-        <label for="comment" class="form-label">Comment</label>
-        <textarea class="form-control" name="content" id="comment" rows="3" required></textarea>
+<div class="card mb-3" style="max-width: 2000px;">
+    <div class="row g-0">
+        <div class="col-md-4">
+            <img class="img-fluid rounded-start" src="{{post.image}}" class="card-img-top" alt="...">
+        </div>
+        <div class="col-md-8">
+            <div class="card-body">
+                <p class="card-text">{{post.name}}</p>
+                <p class="card-text">{{post.user.username}}</p>
+                <h5 class="card-title">{{post.name}}</h5>
+                <p class="card-text">{{post.restaurant}}</p>
+                {{#isOwnedByUser currentUserId=currentUser._id postOwnerId=post.user._id}}
+                <a href="/edit/{{post._id}}" class="btn btn-success">Edit</a>
+                {{/isOwnedByUser}}
+                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+            </div>
+        </div>
     </div>
-    <button type="submit" class="btn btn-success">Comment</button>
-</form>
+    <form action="/post/{{post._id}}" method="POST">
+        <div class="mb-3">
+            <label for="comment" class="form-label">Comment</label>
+            <textarea class="form-control" name="content" id="comment" rows="3" required></textarea>
+        </div>
+        <button type="submit" class="btn btn-success">Comment</button>
+    </form>
 
-<div>
-    {{#each post.comments}}
-    <div>{{this.user.username}}: {{this.content}}</div>
-    {{/each}}
-</div>
+    <div>
+        {{#each post.comments}}
+        <div>{{this.user.username}}: {{this.content}}</div>
+        {{/each}}
+    </div>
