--- a/views/partials/card.hbs
+++ b/views/partials/card.hbs
@@ -2,6 +2,7 @@
   <img src="{{post.image}}" class="card-img-top" alt="...">
   <div class="card-body">
     <p>{{post.user.username}}</p>
+    <a href="/profile/{{post.user._id}}">{{post.user.username}}</a>
     <h5 class="card-title">{{post.name}}</h5>
     <p class="card-text">{{post.restaurant}}</p>
     <a href="/post/{{post._id}}" class="btn btn-primary">See More</a>
