--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -1,12 +1,12 @@
 <div class="card mb-3" style="max-width: 540px;">
   <div class="row g-0">
     <div class="col-md-4">
-      <img src="https://picsum.photos/150" class="img-fluid rounded-start" alt="Profile Image">
+      <img src="/images/profile.jpg" class="img-fluid rounded-start" alt="Profile Image">
     </div>
     <div class="col-md-8">
       <div class="card-body">
         <h4 class="card-title">{{currentUser.username}}</h4>
-        <p class="card-text">Bio:</p>
+        <p class="card-text">{{currentUser.bio}}</p>
         <p class="card-text"><small class="text-body-secondary">Email: {{currentUser.email}}</small></p>
       </div>
     </div>
