--- a/views/recepies/new-post.hbs
+++ b/views/recepies/new-post.hbs
@@ -3,20 +3,40 @@
   <legend>Create a new Post</legend>
   <div class="mb-3">
     <label for="name" class="form-label">Recepie Name</label>
-    <input type="text" name="name" id="recepieNameTextInput" class="form-control" placeholder="Recepie Name" />
+    <input
+      type="text"
+      name="name"
+      id="recepieNameTextInput"
+      class="form-control"
+      placeholder="Recepie Name"
+    />
   </div>
   <div class="mb-3">
     <label for="retaurant" class="form-label">Restaurant Name</label>
-    <input type="text" name="restaurant" id="RestaurantNameTextInput" class="form-control"
-      placeholder="Restaurant Name" />
+    <input
+      type="text"
+      name="restaurant"
+      id="RestaurantNameTextInput"
+      class="form-control"
+      placeholder="Restaurant Name"
+    />
   </div>
   <div class="input-group mb-3">
-    <input type="file" name="image" class="form-control" id="inputGroupFile02" />
+    <input
+      type="file"
+      name="image"
+      class="form-control"
+      id="inputGroupFile02"
+    />
     <label class="input-group-text" for="inputGroupFile02">Image</label>
   </div>
   <div class="mb-3">
     <label for="disabledSelect" class="form-label">Category</label>
-    <select class="form-select" name="category" aria-label="Default select example">
+    <select
+      class="form-select"
+      name="category"
+      aria-label="Default select example"
+    >
       <option selected>Select One</option>
       <option value="Meat">Meat</option>
       <option value="Chicken">Chicken</option>
