--- a/views/users/edit.hbs
+++ b/views/users/edit.hbs
@@ -1,4 +1,4 @@
-<form action="/profile/edit/{{user._id}}" method="POST">
+<form action="/profile/edit/{{user._id}}" method="POST" enctype="multipart/form-data">
 
   <legend>Edit Profile</legend>
   <div class="mb-3">
@@ -13,8 +13,8 @@
     />
   </div>
   <div class="input-group mb-3">
-    <input type="file" class="form-control" id="inputGroupFile02" />
-    <label class="input-group-text" for="inputGroupFile02">Profile Image</label>
+    <input type="file" name="image" class="form-control" id="inputGroupFile02" />
+    <label class="input-group-text" for="inputGroupFile02">Image</label>
   </div>
   <div class="mb-3">
     <label for="bio" class="form-label">Bio</label>
