--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -1,7 +1,7 @@
 <div class="card mb-3" style="max-width: 540px;">
   <div class="row g-0">
     <div class="col-md-4">
-      <img src="/images/profile.jpg" class="img-fluid rounded-start" alt="Profile Image">
+      <img src="{{currentUser.image}}" class="img-fluid rounded-start" alt="Profile Image">
     </div>
     <div class="col-md-8">
       <div class="card-body">
