--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -1,6 +1,6 @@
 <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
 <div class="container-fluid">
-    <a class="navbar-brand" href="/">LetsCookIt</a>
+    <a class="navbar-brand" href="/feed">LetsCookIt</a>
     <button
       class="navbar-toggler d-flex align-items-center"
       type="button"
