--- a/views/recepies/recipe-edit.hbs
+++ b/views/recepies/recipe-edit.hbs
@@ -12,8 +12,8 @@
         </div>
     {{/each}}
 
-    <button class="btn btn-primary" id="add-ingredient">Add ingredient</button>
-    <button type="submit" class="btn btn-primary">Update Recipe</button>
+    <button class="btn btn-secondary" id="add-ingredient">Add ingredient</button>
+    <button type="submit" class="btn btn-dark">Update Recipe</button>
 </form>
 
 <script>
