--- a/views/users/edit.hbs
+++ b/views/users/edit.hbs
@@ -28,6 +28,6 @@
       placeholder="Type your Bio">{{user.bio}}</textarea>
   </div>
 
-  <button type="submit" class="btn btn-primary">Update</button>
-  <a href="#" class="btn btn-primary">Delete Accont</a>
+  <button type="submit" class="btn btn-dark">Update</button>
+  <a href="#" class="btn btn-secondary">Delete Accont</a>
 </form>
