--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -11,7 +11,7 @@
       </div>
     </div>
   </div>
-  <a href="profile/edit/{{user._id}}" class="btn btn-success">Edit</a>
+  <a href="profile/edit/{{user._id}}" class="btn btn-secondary">Edit</a>
 </div>
 
 <div class="container my-5">
