--- a/views/recepies/edit-post.hbs
+++ b/views/recepies/edit-post.hbs
@@ -56,12 +56,13 @@
       <option value="Other">Other</option>
     </select>
   </div>
-  <button type="submit" class="btn btn-primary">Update</button>
-  <a href="/post/{{post._id}}/postDelete" class="btn btn-primary">Delete Post</a>
+  <button type="submit" class="btn btn-dark">Update</button>
+  <a href="/post/{{post._id}}/postDelete" class="btn btn-secondary">Delete Post</a>
 </form>
 
-<div class="card" style="max-width: 540px;">
+
   {{#each post.comments}}
+  <div class="card" style="max-width: 540px;">
     <div class="card-header">
       {{this.user.username}}
     </div>
@@ -71,8 +72,9 @@
       <a href="/post/{{this._id}}/commentDelete" class="btn btn-primary">Delete
         Comment</a>
     </div>
+  </div>
   {{/each}}
-</div>
+
 
 <script>
   let selectedCategory = "{{post.category}}";
