--- a/views/recepies/feed.hbs
+++ b/views/recepies/feed.hbs
@@ -1,4 +1,4 @@
-<div class="container my-5">
+<div class="my-5 mx-9 container">
   <div class="row row-cols-1 row-cols-md-3 g-4">
     {{#each posts}}
       {{>card post=this currentUser=../currentUser}}
