--- a/views/recepies/new-post.hbs
+++ b/views/recepies/new-post.hbs
@@ -52,6 +52,6 @@
       <option value="Other">Other</option>
     </select>
   </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-dark">Submit</button>
 
 </form>
