--- a/views/recepies/new-recipe.hbs
+++ b/views/recepies/new-recipe.hbs
@@ -8,8 +8,8 @@
         <label for="floatingTextarea2">Instructions</label>
     </div>
 
-    <button class="btn btn-primary" id="add-ingredient">Add ingredient</button>
-    <button type="submit" class="btn btn-primary">Create</button>
+    <button class="btn btn-secondary" id="add-ingredient">Add ingredient</button>
+    <button type="submit" class="btn btn-dark">Create</button>
 </form>
 
 <script>
