--- a/views/users/users-profile.hbs
+++ b/views/users/users-profile.hbs
@@ -1,3 +1,4 @@
+<div class="container my-4 mx-6">
 <div class="card mb-3" style="max-width: 540px;">
   <div class="row g-0">
     <div class="col-md-4">
@@ -11,6 +12,7 @@
       </div>
     </div>
   </div>
+</div>
 </div>
 
 <div class="container my-5">
