--- a/views/recepies/edit-post.hbs
+++ b/views/recepies/edit-post.hbs
@@ -1,6 +1,6 @@
 <div class="d-flex justify-content-center my-5">
-  <form action="/edit/{{post._id}}" method="POST" enctype="multipart/form-data">
-  
+  <form action="/edit/{{post._id}}" method="POST" enctype="multipart/form-data" style="max-width: 600px;">
+
     <legend>Edit Post</legend>
     <div class="mb-3">
       <label for="name" class="form-label">Recepie Name</label>
